...
                        .foregroundStyle(.blue)
                        .font(.system(size: 14))
                        .frame(width: 80, height: 27)
                        .overlay(RoundedRectangle(cornerRadius: 6)
                            .stroke(Color.buttonBorderColor, lineWidth: 1))
                }
                .accessibilityIdentifier("TableMoreButtonIdentifier")
                .popover(isPresented: $showingPopover) {
                    if #available(iOS 16.4, *) {
                        VStack(spacing: 8) {
                            if viewModel.tableDataModel.selectedRows.count == 1 {
                                Button(action: {
                                    showingPopover = false
...
                                        .foregroundStyle(.blue)
                                        .font(.system(size: 14))
                                        .frame(height: 27)
                                }
                                .padding(.horizontal, 16)
                                .padding(.top, 16)
                                .accessibilityIdentifier("TableInsertRowIdentifier")
                                
                                Button(action: {
                                    showingPopover = false
                                    viewModel.moveUP()
                                }) {
                                    Text("Move Up")
...
                                        .foregroundStyle(.blue)
                                        .font(.system(size: 14))
                                        .frame(height: 27)
                                }
                                .padding(.horizontal, 16)
                                .padding(.top, viewModel.tableDataModel.selectedRows.count > 1 ? 16 : 0)
                                .accessibilityIdentifier("TableEditRowsIdentifier")
                            }
                            
                            Button(action: {
                                showingPopover = false
                                viewModel.deleteSelectedRow()
                            }) {
...
                    .frame(height: 27)
                    .padding(.horizontal, 16)
                    .overlay(RoundedRectangle(cornerRadius: 6)
                        .stroke(Color.buttonBorderColor, lineWidth: 1))
            }
            .disabled(viewModel.tableDataModel.mode == .readonly)
            .accessibilityIdentifier("TableAddRowIdentifier")
        }
    }

    var rowTitle: String {
        "\(viewModel.tableDataModel.selectedRows.count) " + (viewModel.tableDataModel.selectedRows.count > 1 ? "rows": "row")
    }
...
                            }
                            .overlay(
                                RoundedRectangle(cornerRadius: 6)
                                    .stroke(Color.allFieldBorderColor, lineWidth: 1)
                            )
                        })
                        .accessibilityIdentifier("ApplyAllButtonIdentifier")
                        
                        Button(action: {
                            presentationMode.wrappedValue.dismiss()
                        }, label: {
                            ZStack {
                                RoundedRectangle(cornerRadius: 6)
...
                                    .accessibilityIdentifier("EditRowsDropdownFieldIdentifier")
                            case .date:
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableDateView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: isUsedForBulkEdit, isSingleLineLayout: true)
                                    .padding(.vertical, 2)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsDateFieldIdentifier")
                            case .number:
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableNumberView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: isUsedForBulkEdit)
                                    .keyboardType(.decimalPad)
                                    .frame(minHeight: 40)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsNumberFieldIdentifier")
                            case .multiSelect:
                                columnTitle(col, isCellFilled: isEffectivelyFilled)
                                TableMultiSelectView(cellModel: Binding.constant(cellModel),isUsedForBulkEdit: isUsedForBulkEdit)
                                    .padding(.vertical, 4)
                                    .cellBorder(isFocused: isFocused)
                                    .accessibilityIdentifier("EditRowsMultiSelecionFieldIdentifier")
...
