...
                            .frame(height: 25)
                    case .dropdown:
                        TableDropDownOptionListView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: true, selectedDropdownValue: model.filterText)
                            .accessibilityIdentifier("SearchBarDropdownIdentifier")
                    case .number:
                        TableNumberView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: true, number: model.filterText)
                            .accessibilityIdentifier("SearchBarNumberIdentifier")
                            .font(.system(size: 12))
                            .foregroundColor(.primary)
                            .padding(.vertical, 4)
                            .frame(height: 25)
                            .background(Color.searchFieldBackground)
                            .cornerRadius(6)
                            .padding(.leading, 8)
                    case .multiSelect:
                        TableMultiSelectView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: true, isSearching: true, searchValue: model.filterText)
                            .accessibilityIdentifier("SearchBarMultiSelectionFieldIdentifier")
                    case .barcode:
                        TableBarcodeView(cellModel: Binding.constant(cellModel), isUsedForBulkEdit: true, text: model.filterText)
                            .accessibilityIdentifier("SearchBarCodeFieldIdentifier")
                            .font(.system(size: 12))
                            .darkLightThemeColor()
                            .padding(.vertical, 4)
                            .frame(height: 25)
                            .background(Color.searchFieldBackground)
                            .cornerRadius(6)
...
                        Image(systemName: getSortIcon())
                            .foregroundColor(getIconColor())
                    }
                    .font(.system(size: 14))
                    .foregroundColor(.primary)
                })
                .accessibilityIdentifier("SortButtonIdentifier")
                .frame(width: 75, height: 25)
                .background(Color.searchFieldBackground)
                .cornerRadius(4)

                Button(action: {
                    model.filterText = ""
...
                        .padding(.all, 8)
                        .background(Color.searchFieldBackground)
                        .cornerRadius(4)
                        .padding(.trailing, 8)

                })
                .accessibilityIdentifier("HideFilterSearchBar")
            }
        }
        .id(model.colID)
        .frame(height: 40)
        .background(Color(.systemGray6))
        .cornerRadius(8)
...
